--- a/reveiller/reveiller/Base.lproj/Main.storyboard
+++ b/reveiller/reveiller/Base.lproj/Main.storyboard
@@ -219,7 +219,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NNk-M8-FSn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1464" y="-320"/>
+            <point key="canvasLocation" x="1464" y="-542"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="pCd-S1-Rcy">
+            <objects>
+                <viewController id="D1z-p4-yhw" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nqQ-RG-nOq"/>
+                        <viewControllerLayoutGuide type="bottom" id="hLp-lP-4gX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="r8y-Wb-mhk">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7aH-gp-G66" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1464" y="132"/>
         </scene>
     </scenes>
 </document>
